--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
             Load general conditions
         </button>
         <div class="generalConditions"></div>
-        <script type="text/javascript" src="https://assets.oney.io/build/loader.min.js"></script>
+        <script type="text/javascript" src="https://assets-staging.oney.io/build/loader.min.js"></script>
         <script>
             function showGeneralConditions () {
 
